--- a/Project2/app/assets/css/mockup/main.css
+++ b/Project2/app/assets/css/mockup/main.css
@@ -191,7 +191,7 @@ textarea {
   /* 1 */
   line-height: inherit;
   /* 1 */
-  color: inherit;
+  color: black;
   /* 1 */
   margin: 0;
   /* 2 */
